Update spring ai implementation